--- a/app/views/profile/editProfile.scala.html
+++ b/app/views/profile/editProfile.scala.html
@@ -244,6 +244,11 @@
                             '_text -> Messages("profile.create.form.host-text"),
                             '_label -> Messages("profile.create.form.host-label")
                         )
+                        <div class="row">
+                            <div class="col-md-offset-4 col-md-6">
+                                @Html(Messages("profile.create.form.host-help-text"))
+                            </div>
+                        </div>
                         <hr>
 
                         <!-- Payment options -->
