- Polished the date booker

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -989,12 +989,17 @@ input[type="reset"]:hover
 }
 .event-date-list-result {
   border-top: 1px solid @hdc-light-orange;
-  margin-top:15px;
 }
 .event-date-list-no-results {
   border-radius: 3px;
   border:2px dashed @hdc-gray;
   padding:2em;
+}
+.event-date-list-picker-list {
+  margin-bottom:30px;
+}
+.inline-date-selector {
+  margin-bottom:15px;
 }
 .inline-date-selector .bootstrap-datetimepicker-widget table td.day {
   color: @hdc-black;
