--- a/app/views/event/bookingDatePicker.scala.html
+++ b/app/views/event/bookingDatePicker.scala.html
@@ -22,7 +22,7 @@
             data-get-time-route="@{routes.EventPageController.getEventTimesForDateAJAX()}"
             class="inline-date-selector animated flipInX"
             style="display: none"></div>
-        <div id="event-date-list-picker-list" class="animated flipInX" style="display: none">
+        <div id="event-date-list-picker-list" class="event-date-list-picker-list animated flipInX" style="display: none">
 
         </div>
     </div>
