- Now possible to remove event dates that are not booked

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -11,5 +11,6 @@
 
     <div class="row big-margin-top">
         @views.html.admin.statistics.stat(statData)
+        @views.html.admin.statistics.ga()
     </div>
 }
