--- a/app/views/event/eventMoreImages.scala.html
+++ b/app/views/event/eventMoreImages.scala.html
@@ -5,7 +5,7 @@
   @if(eventImages.nonEmpty) {
     <div class="row">
       <div class="col-xs-12">
-        <h3 class="lead">@Messages("event.more-images.header")</h3>
+        <h3 class="lead text-center">@Messages("event.more-images.header")</h3>
       </div>
     </div>
     <div class="row event-more-images">
