--- a/app/views/like/hdcLike.scala.html
+++ b/app/views/like/hdcLike.scala.html
@@ -5,9 +5,9 @@
         case None => {
             <a href="@securesocial.controllers.routes.LoginPage.login" class="btn btn-default btn-hdc-like pull-left"><span class="hdc-like-icon"></span>&nbsp;@Messages("like.text")</a>
         }
-        case Some(currentUser) => {
+        case Some(cu) => {
             @if(likedEarlierDate.nonEmpty) {
-                <button class="btn btn-default btn-hdc-like btn-hdc-like-active popover-trigger pull-left" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-container="body" data-content="@Messages("like.already-liked.text")"><span class="hdc-like-icon"></span>&nbsp;@Messages("liked.text")</button>
+                <button class="btn-hdc-like btn-hdc-like-active popover-trigger pull-left" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-container="body" data-content="@Messages("like.already-liked.text")"><span class="hdc-like-icon"></span>&nbsp;@Messages("liked.text")</button>
             }else {
                @if(userLikesForm.get.userLikesThisObjectId.nonEmpty) {
                    @helper.form(action = routes.LikeController.likeSubmit(), 'style -> "display:inline;"){
