--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -798,10 +798,10 @@ input[type="reset"]:hover
 .switch {
   position: relative;
   margin: 0px auto 20px auto;
-  height: 44px;
+  height: 34px;
   width: 100%;
-  background: @hdc-light-gray;
-  border-radius: 3px;
+  background: @hdc-semi-light-gray;
+  border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
 }
@@ -811,7 +811,7 @@ input[type="reset"]:hover
   z-index: 2;
   float: left;
   width: 50%;
-  line-height: 43px;
+  line-height: 33px;
   color: @hdc-dark-gray;
   text-align: center;
   cursor: pointer;
@@ -859,7 +859,7 @@ input[type="reset"]:hover
   top: 2px;
   left: 2px;
   width: 49.50%;
-  height: 40px;
+  height: 30px;
   background: #65bd63;
   border-radius: 3px;
   background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
@@ -922,6 +922,31 @@ input[type="reset"]:hover
 }
 .event-header {
   color: @hdc-green;
+  padding-top:15px;
+}
+.event-header-preamble {
+  color: @hdc-gray;
+  font-size:1.2em;
+}
+.event-share-box {
+  background-color: @hdc-light-gray;
+  border:1px solid @hdc-semi-light-gray;
+  border-radius: 5px;
+  display: block;
+  overflow:hidden;
+  padding:0 10px;
+  margin:20px 0;
+}
+.event-booking-col {
+  padding-left:5px;
+  padding-right:5px;
+}
+.event-booking-box {
+  border-radius: 5px;
+  background-color: @hdc-light-gray;
+  border:1px solid @hdc-gray;
+  margin:0px 10px 20px 10px;
+  padding:0 20px 20px 20px;
 }
 .event-more-images .thumbnail {
   background-color: @hdc-light-gray;
@@ -982,10 +1007,10 @@ input[type="reset"]:hover
 
 .event-date-list-header {
   display: block;
-  padding: 1em;
+  padding: 0.3em;
   background-color: @hdc-light-gray;
-  margin-top:0px;
-  display:none;
+  margin-top:5px;
+  font-size:28px;
 }
 .event-date-list-result {
   border-top: 1px solid @hdc-light-orange;
@@ -1599,8 +1624,11 @@ input[type="reset"]:hover
 {
   color:@hdc-black;
   line-height:2em;
-  padding:4px 5px 4px 10px;
-  border:none;
+  padding:4px 10px 4px 10px;
+  /*padding:11px;*/
+  border:1px solid @hdc-semi-light-gray;
+  border-radius: 13px;
+  background-color: @hdc-white;
 }
 .hdc-like-icon
 {
