--- a/app/views/admin/statistics/stat.scala.html
+++ b/app/views/admin/statistics/stat.scala.html
@@ -33,6 +33,14 @@
                             <td>@Messages("admin.stat.type.rating.recipes")</td>
                             <td>@stat.get.ratingsRecipeTotal</td>
                         </tr>
+                        <tr>
+                            <td>@Messages("admin.stat.type.events")</td>
+                            <td>@stat.get.eventsTotal</td>
+                        </tr>
+                        <tr>
+                            <td>@Messages("admin.stat.type.event-bookings")</td>
+                            <td>@stat.get.eventsBookingsTotal</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
